--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a id='video' class='link' href='https://www.youtube.com/channel/UCZ4YauIDyUD-eou-k8VirEQ'>Video</a>
         <a id='music' class='link' href='https://soundcloud.com/kinnamusic'>Music</a>
         <a id='art' class='link' href='https://ello.co/kinnagw'>Art</a>
-        <h3>Original creativity from a millenial girl...</h3> 
+        <h3>Original creativity from a millennial girl...</h3> 
       </div>
     </body>
     </html>
