--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <body>
       <div class="main">
         <h1 id='kinna'>Kinna</h3>
-        <a id='video' class='link' href='https://www.youtube.com/channel/UCZ4YauIDyUD-eou-k8VirEQ'>Video</a>
-        <a id='music' class='link' href='https://soundcloud.com/kinnamusic'>Music</a>
-        <a id='art' class='link' href='https://ello.co/kinnagw'>Art</a>
+        <a id='video' target='_blank' class='link' href='https://www.youtube.com/channel/UCZ4YauIDyUD-eou-k8VirEQ'><span class='details'>https://youtube.com</span> Video</a>
+        <a id='music' target='_blank' class='link' href='https://soundcloud.com/kinnamusic'><span class='details'>https://soundcloud.com</span> Music</a>
+        <a id='art' target='_blank' class='link' href='https://ello.co/kinnagw'><span class='details'>https://ello.co</span> Art</a>
         <h3>Original creativity from a millennial girl...</h3> 
       </div>
     </body>
