--- a/_unused/index.html
+++ b/_unused/index.html
@@ -24,11 +24,12 @@
 
     <body>
       <div class="main">
-        <h1 id='kinna'>Kinna</h3>
-        <a id='video' target='_blank' class='link' href='https://www.youtube.com/channel/UCZ4YauIDyUD-eou-k8VirEQ'><span class='details'>https://youtube.com</span> Video</a>
-        <a id='music' target='_blank' class='link' href='https://soundcloud.com/kinnamusic'><span class='details'>https://soundcloud.com</span> Music</a>
-        <a id='art' target='_blank' class='link' href='https://ello.co/kinnagw'><span class='details'>https://ello.co</span> Art</a>
-        <h3>Original creativity from a millennial girl...</h3> 
+        <h1 id='kinna'>Kinna</h1>
+        <a id='music' target='_blank' class='link' href='https://soundcloud.com/kinnamusic'><span class='details'>https://soundcloud.com</span>music</a>
+        <a id='film' target='_blank' class='link' href='https://www.youtube.com/channel/UCZ4YauIDyUD-eou-k8VirEQ'><span class='details'>https://youtube.com</span>film</a>
+        <a id='news' target='_blank' class='link' href='https://ello.co/kinnagw'><span class='details'>https://ello.co</span>news</a>
+        <a id='about' target='_blank' class='link' href='https://ello.co/kinnagw'><span class='details'>https://ello.co</span>about</a>
+        <a id='contact' target='_blank' class='link' href='https://ello.co/kinnagw'><span class='details'>https://ello.co</span>contact</a>
       </div>
     </body>
     </html>
