--- a/404.html
+++ b/404.html
@@ -4,7 +4,15 @@ title: "404: Page not found"
 permalink: /404.html
 ---
 
-<div class=""page">
+<div class="heading">
+    <a href="/" class="logo" alt="Kinna">Kinna</a>
+
+    <div class="menu">
+        {% include menu.html %}
+    </div>
+</div>
+
+<div class="main">
     <h1 class="page-title">404: Page not found</h1>
-    <p class="plain">Sorry, we've misplaced thar URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+    <p class="plain">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
 </div>
